--- a/app/views/variants/_index.html.erb
+++ b/app/views/variants/_index.html.erb
@@ -17,7 +17,7 @@
         <td><%= var.product.price %></td>
         <td><%= var.colour %></td>
         <td><%= var.stock %></td>
-        <td><%= var.created_at.strftime('%d %b %Y') %></td>
+        <td><%= var.created_at.strftime('%d %b %Y [%a]') %></td>
         <td class="display_flex_style">
           <div><%= link_to  "edit", edit_variant_path(var, product_id: var.product) %></div>
           <div class="margin_hor_15px">|</div>
