--- a/app/views/orders/_index.html.erb
+++ b/app/views/orders/_index.html.erb
@@ -27,7 +27,7 @@
             <div class="red_text"><%= order.fulfilled %></div>
           <% end %>
         </td>
-        <td><%= order.created_at.strftime('%d %b %Y') %></td>
+        <td><%= order.created_at.strftime('%d %b %Y [%a]') %></td>
         <td class="display_flex_style">
           <div><%= link_to "edit", edit_admin_order_path(order.admin, order) %></div>
           <div class="margin_hor_15px">|</div>
@@ -66,7 +66,7 @@
             <div class="red_text"><%= order.fulfilled %></div>
           <% end %>
         </td>
-        <td><%= order.created_at.strftime('%d %b %Y') %></td>
+        <td><%= order.created_at.strftime('%d %b %Y [%a]') %></td>
         <td class="display_flex_style">
           <div><%= link_to "edit", edit_admin_order_path(order.admin, order) %></div>
           <div class="margin_hor_15px">|</div>
