--- a/app/views/admins/_admin_dashboard_data.html.erb
+++ b/app/views/admins/_admin_dashboard_data.html.erb
@@ -62,7 +62,7 @@
           <th># orders</th>
           <th>fulfilled</th>
           <th>created</th>
-          <th>amount</th>
+          <th>amount (£)</th>
           <th>action</th>
         </tr>
 
