--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -173,6 +173,8 @@ input[type='radio']:checked:after {
 
 .dashboard_inner_container {
     display: flex;
+    min-height: 835px;
+    background: transparent;
 }
 
 .dashboard_container .left_content {
