--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Products</h1>
 <div id="products">
-  <ul>
+  <ul class="listed_products">
     <% @products.each do |product| %>
       <li class="product_item">
         <div><%= render product %></div>
