--- a/app/views/shared/_header_user.html.erb
+++ b/app/views/shared/_header_user.html.erb
@@ -15,7 +15,7 @@
         <li>
           <%= link_to products_path, class: "icon_box_link" do %>
             <div><span class="material-icons">category</span></div>
-            <div class="header_text">products</div>
+            <div class="header_text">shop</div>
           <% end %>
         </li>
         <li>
