--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -43,3 +43,10 @@
     }) %>
   </div>
 </div>
+
+<div class="border_content"></div>
+
+<div>
+  <div class="product_title">product variants (Customer View)</div>
+  <div>variations</div>
+</div>
