--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -41,7 +41,13 @@
               <% end %>
             </div>
             <div><%= "#{var.colour}" %></div>
-            <div><%= "stock: #{var.stock}" %></div>
+            <div>
+              <% if var.stock == 0 || var.stock == nil %>
+              <div>stock: 0</div>
+              <% else %>
+                <%= "stock: #{var.stock}" %>
+                <% end %>
+            </div>
             <div><%= link_to "edit", edit_variant_path(var, product_id: @product) %></div>
           </li>
         <% end %>
