--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -46,7 +46,7 @@
 
 <div class="border_content"></div>
 
-<div class="product_variation_submit" data-contoller="products">
+<div class="product_variation_submit" data-contoller="product" data-product-product-value="<%= product.to_json %>">
   <!--variants-->
   <div class="product_variants">
     <div class="product_title">product variants (Customer View)</div>
