--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -65,6 +65,6 @@
   <!--submit-->
   <div class="product_submit_btn_section">
     <div id="selected-colour"></div>
-    <button>add to cart</button>
+    <button data-action="click->products#addToCart">add to cart</button>
   </div>
 </div>
