--- a/app/views/shared/_header_user.html.erb
+++ b/app/views/shared/_header_user.html.erb
@@ -25,7 +25,7 @@
           <% end %>
         </li>
         <li>
-          <%= link_to "#", class: "icon_box_link" do %>
+          <%= link_to cart_path, class: "icon_box_link" do %>
             <div><span class="material-icons">shopping_cart</span></div>
             <div class="header_text">cart <span>(2)</span></div>
           <% end %>
