--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,12 +1,11 @@
+<h1>Cart page</h1>
 <div data-controller="cart">
-  <h1>Cart page</h1>
-
   <!--cart_total-->
   <div id="total"></div>
   <!--cart_total-->
 
   <!--cart_table-->
-  <div class="table_container">
+  <div class="table_container hide">
     <table class="table_content">
       <tr>
         <th>header 1</th>
