--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -354,3 +354,15 @@ input[type='radio']:checked:after {
     margin-top: 15px;
 }
 
+.mt-2 {
+    background-color: #DADADA;
+    margin-bottom: 10px;
+    padding: 15px;
+}
+
+#total {
+    background-color: #CCCCCC;
+    padding: 15px;
+    margin: 30px 0px;
+}
+
