--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -23,8 +23,8 @@
   <!--cart_table-->
 
   <!--button-->
-  <button data-cation="click->cart#checkout">checkout</button>
-  <button data-cation="click->clear">clear cart</button>
+  <button data-action="click->cart#checkout">checkout</button>
+  <button data-action="click->cart#clear">clear cart</button>
   <!--button-->
 </div>
 
