--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,30 +1,15 @@
-<h1>Cart page</h1>
-<div data-controller="cart">
-  <!--cart_total-->
-  <div id="total"></div>
-  <!--cart_total-->
+<div class="main_cart_container">
+  <h1>Cart page</h1>
+  <div id="errorContainer"></div>
+  <div data-controller="cart">
+    <!--cart_total-->
+    <div id="total"></div>
+    <!--cart_total-->
 
-  <!--cart_table-->
-  <div class="table_container hide">
-    <table class="table_content">
-      <tr>
-        <th>header 1</th>
-        <th>header 2</th>
-      </tr>
-
-      <%# @not_fulfilled_orders.all.limit(5).each do |order| %>
-      <tr>
-        <td>content 1</td>
-        <td>content 2</td>
-      </tr>
-      <%# end %>
-    </table>
+    <!--button-->
+    <button data-action="click->cart#checkout">checkout</button>
+    <button data-action="click->cart#clear">clear cart</button>
+    <!--button-->
   </div>
-  <!--cart_table-->
-
-  <!--button-->
-  <button data-action="click->cart#checkout">checkout</button>
-  <button data-action="click->cart#clear">clear cart</button>
-  <!--button-->
 </div>
 
