--- a/app/views/static_pages/homepage.html.erb
+++ b/app/views/static_pages/homepage.html.erb
@@ -3,4 +3,5 @@
 <div><br/><br/>
   <div>video link</div>
   <div><%= link_to "stripe tutorial", "https://www.youtube.com/watch?v=qEVn9sXNCAI&list=PLdTytUiloS14rDdf6ftW63pIgoxshY12w", target: "_blank" %></div>
+  <div><%= link_to "stripe wbehooks", "https://www.cjav.dev/articles/handling-stripe-webhooks-with-rails", target: "_blank" %></div>
 </div>
