--- a/app/views/shared/_admin_orders.html.erb
+++ b/app/views/shared/_admin_orders.html.erb
@@ -5,5 +5,16 @@
   <!--content-->
   <h1>orders <%= "[#{@orders.all.count}]" %></h1>
   <div class="btn_cover"><%= link_to "new order", new_admin_order_path(current_admin), class: "btn_general" %></div>
+  <div>
+    <span><%= link_to "all", "#" %></span>
+    <span>|</span>
+    <span><%= link_to "unfulfilled orders", "#" %></span>
+    <span>|</span>
+    <span><%= link_to "fulfilled orders", "#" %></span>
+    <span>|</span>
+    <span><%= link_to "paid & unfulfilled", "#" %></span>
+    <span>|</span>
+    <span><%= link_to "paid & fulfilled", "#" %></span>
+  </div>
   <div><%= render "orders/index" %></div>
 </div>
