--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -366,3 +366,8 @@ input[type='radio']:checked:after {
     margin: 30px 0px;
 }
 
+.page_section {
+    font-size: 10px;
+    margin-top: 30px;
+}
+
