--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -9,38 +9,35 @@
   <!--section-->
   <div class="margin_bottom_15px product_name_cover">
     <div class="product_title">name</div>
-    <div>
-      <%# product.name %>
-      <%= content_tag(:div, product.name, data:{ share_target: "name" }) %>
-    </div>
+    <div><%= product.name %></div>
+    <div class="hide"><%# content_tag(:div, product.name, data:{ share_target: "name" }) %></div>
   </div>
   <!--section-->
 
   <!--section-->
   <div class="margin_bottom_15px price_cover">
     <div class="product_title">description</div>
-    <div>
-      <%# product.description %>
-      <%= content_tag(:div, product.description, data:{ share_target: "description" }) %>
-    </div>
+    <div><%= product.description %></div>
+    <div class="hide"><%# content_tag(:div, product.description, data:{ share_target: "description" }) %></div>
   </div>
   <!--section-->
 
   <!--section-->
   <div class="margin_bottom_15px price_cover">
     <div class="product_title">price</div>
-    <div>
-      <%# product.price %>
-      <%= content_tag(:div, product.price, data:{ share_target: "price" }) %>
-    </div>
+    <div><%= "£#{product.price}" %></div>
+    <div class="hide"><%# content_tag(:div, product.price, data:{ share_target: "price" }) %></div>
   </div>
   <!--section-->
+
+  <!--share_btn-->
   <div class="share_button_cover">
     <%= button_to "Share", "", data: { action: "click->share#share"} %>
     <%= content_tag(:p, "", class: "result", data: {
       share_target: "result"
     }) %>
   </div>
+  <!--share_btn-->
 </div>
 
 <div class="border_content"></div>
@@ -61,10 +58,12 @@
       </ul>
     </div>
   </div>
+  <!--variants-->
 
-  <!--submit-->
+  <!--add_cart-->
   <div class="product_submit_btn_section">
     <div id="selected-colour"></div>
     <button data-action="click->products#addToCart">add to cart</button>
   </div>
+  <!--add_cart-->
 </div>
