--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -107,6 +107,7 @@ input[type='radio']:checked:after {
 .product_title {
     font-weight: bold;
     text-transform: capitalize;
+    margin-right: 5px;
 }
 
 .form_fields_cover {
@@ -265,6 +266,8 @@ input[type='radio']:checked:after {
     display: flex;
     height: 100px !important;
     align-items: center;
+    color: #2E2F30;
+    text-decoration: none;
 }
 
 .margin_hor_15px {
@@ -396,4 +399,24 @@ input[type='radio']:checked:after {
 
 .right_content_products {
     width: 100%;
+}
+
+.products_user_actions_section ul {
+    list-style-type: none;
+    display: flex;
+    margin: 0px;
+    padding: 0px;
+}
+
+
+.product_user_li {
+    background-color: red;
+    padding: 15px;
+    border-radius: 5px;
+    font-size: 10px;
+    margin-right: 10px;
+}
+
+.height_50px {
+    height: 50px !important;
 }
