--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,3 @@
-<h1>Products</h1>
 <div id="products" class="left_right_content_products">
   <!--left_content_products-->
   <div class="left_content_products">
@@ -20,15 +19,17 @@
       <% @products.each do |product| %>
         <li class="product_item">
           <!--section-->
-          <div class="margin_bottom_15px product_name_cover">
-            <div class="product_title">name</div>
-            <div><%= product.name %></div>
+          <div class="product_name_cover">
+            <%= link_to product, class: "display_flex_style height_50px" do %>
+              <div class="product_title">product name:</div>
+              <div><%= product.name %></div>
+            <% end %>
           </div>
           <!--section-->
 
           <!--section-->
           <div class="margin_bottom_15px">
-            <div class="product_image"><%= image_tag "#{product.image_url}" %></div>
+            <div class="product_image"><%= link_to((image_tag "#{product.image_url}"), product) %></div>
           </div>
           <!--section-->
 
@@ -48,35 +49,34 @@
           </div>
           <!--section-->
 
-
-
-
-          <div>
-            <% if user_signed_in? %>
-              <% if current_user %>
+          <!--action_buttons-->
+          <div class="products_user_actions_section">
+            <% if user_signed_in? && current_user %>
+              <ul>
                 <!--impression code-->
-                <div><%= "#{product.impressions_count} views" %></div>
-                <!--impression code-->
+                <li class="product_user_li">
+                  <div><div><%= "#{product.impressions_count} views" %></div></div>
+                </li>
 
                 <!--views-->
-                <% if product.reviews.present? %>
-                  <div><%= "#{product.average_rating}star (#{product.reviews.count}) reviews" %></div>
-                <% else %>
-                  <div>no reviews</div>
-                <% end %>
-                <!--views-->
+                <li class="product_user_li">
+                  <% if product.reviews.present? %>
+                    <div><%= "#{product.average_rating}star (#{product.reviews.count}) reviews" %></div>
+                  <% else %>
+                    <div>no reviews</div>
+                  <% end %>
+                </li>
 
                 <!--favourite-->
-                <div id="product-<%= product.id %>">
-                  <%= render partial: 'shared/favourites', locals: { product: product} %>
-                </div>
-                <!--favourite-->
-              <% end %>
+                <li class="product_user_li">
+                  <div id="product-<%= product.id %>">
+                    <%= render partial: 'shared/favourites', locals: { product: product} %>
+                  </div>
+                </li>
+              </ul>
             <% end %>
           </div>
-          <p>
-            <%= link_to "view", product %>
-          </p>
+          <!--action_buttons-->
         </li>
       <% end %>
     </ul>
