--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,13 +1,6 @@
 <div id="<%= dom_id product %>" data-controller="share" data-share-url-value="<%= product_url(product) %>">
   <!--section-->
-  <div class="margin_bottom_15px">
-    <div class="product_title">product image</div>
-    <div class="product_image"><%= image_tag "#{product.image_url}" %></div>
-  </div>
-  <!--section-->
-
-  <!--section-->
-  <div class="margin_bottom_15px product_name_cover">
+  <div class="product_name_cover display_flex_style height_50px">
     <div class="product_title">name</div>
     <div><%= product.name %></div>
     <div class="hide"><%# content_tag(:div, product.name, data:{ share_target: "name" }) %></div>
@@ -15,11 +8,19 @@
   <!--section-->
 
   <!--section-->
-  <div class="margin_bottom_15px price_cover">
-    <div class="product_title">description</div>
-    <div><%= product.description %></div>
-    <div class="hide"><%# content_tag(:div, product.description, data:{ share_target: "description" }) %></div>
+  <div class="margin_bottom_15px">
+    <div class="product_image"><%= image_tag "#{product.image_url}" %></div>
   </div>
+  <!--section-->
+
+  <!--section-->
+  <% if product.description.present? %>
+    <div class="margin_bottom_15px price_cover">
+      <div class="product_title">description</div>
+      <div><%= product.description %></div>
+      <div class="hide"><%# content_tag(:div, product.description, data:{ share_target: "description" }) %></div>
+    </div>
+  <% end %>
   <!--section-->
 
   <!--section-->
@@ -40,7 +41,10 @@
   <!--share_btn-->
 </div>
 
-<div class="border_content"></div>
+
+
+
+
 
 <div class="product_variation_submit" data-controller="products" data-products-product-value="<%= product.to_json %>">
   <!--variants-->
