--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,3 @@
-<p style="color: green"><%= notice %></p>
 <div class="product_item">
 
   <!--section-->
@@ -6,14 +5,13 @@
   <!--section-->
 
   <!--section-->
-  <div class="margin_bottom_15px">
-    <div class="product_title">product category</div>
+  <div class="margin_bottom_15px bread_crumb_cover">
     <span><%= @product.category_producttype.name %></span>
-    <span>--></span>
+    <span class="bc_arrow">></span>
     <span><%= @product.category_productitemtype.name %></span>
-    <span>--></span>
+    <span class="bc_arrow">></span>
     <span><%= @product.category_productsubtype.name %></span>
-    <span>--></span>
+    <span class="bc_arrow">></span>
     <span><%= @product.category_productstyle.name %></span>
   </div>
   <!--section-->
