--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -31,6 +31,15 @@
   </div>
   <!--section-->
 
+  <!--user_action_buttons-->
+  <!--user_action_buttons-->
+
+
+
+
+
+
+
   <!--share_btn-->
   <div class="share_button_cover hide">
     <%= button_to "Share", "", data: { action: "click->share#share"} %>
