--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -422,7 +422,6 @@ input[type='radio']:checked:after {
     padding: 0px;
 }
 
-
 .product_user_li {
     background-color: #2699FB;
     padding: 15px;
@@ -484,6 +483,45 @@ input[type='radio']:checked:after {
 
 .var_image_cover img {
     width: 100px;
+}
+
+.review_container {
+    margin-top: 30px;
+}
+
+.review_btn {
+    background-color: #2699FB;
+    font-size: 10px;
+    padding: 15px 30px;
+    text-transform: capitalize;
+    text-decoration: none;
+    color: black;
+    border-radius: 3px;
+}
+
+.review_btn:hover {
+    opacity: 0.7;
+}
+
+.header_review {
+    font-weight: bold;
+    text-transform: capitalize;
+    margin-top: 35px;
+    font-size: 12px;
+}
+
+.back_to_prod_btn {
+    background-color: #2699FB;
+    padding: 15px;
+    display: flex;
+    color: black;
+    font-size: 10px;
+    text-transform: capitalize;
+    text-decoration: none;
+}
+
+.back_to_prod_btn:hover {
+    opacity: 0.7;
 }
 
 
