--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,54 +20,26 @@
   <div><%= render @product %></div>
   <!--section-->
 
-  <div class="border_content"></div>
+
+
+
 
   <!--section-->
-  <div class="margin_bottom_15px">
-    <div class="product_title">product variants (Admin View)</div>
-    <div class="margin_bottom_15px"><%= link_to "create variant for product", new_variant_path(product_id: @product) %></div>
-    <div class="variant_cover">
-      <ul>
-        <% @product.variants.each do |var| %>
-          <li>
-            <div>
-              <% if var.image_var.present? %>
-                <%= cl_image_tag(var.image_var_url) %>
-              <% else %>
-                <%= image_tag "#{var.image_url}" %>
-              <% end %>
-            </div>
-            <div><%= "#{var.colour}" %></div>
-            <div>
-              <% if var.stock == 0 || var.stock == nil %>
-              <div>stock: 0</div>
-              <% else %>
-                <%= "stock: #{var.stock}" %>
-                <% end %>
-            </div>
-            <div><%= link_to "edit", edit_variant_path(var, product_id: @product) %></div>
-          </li>
+  <div class="review_container">
+    <!--review-->
+    <% if current_user %>
+      <div class="margin_bottom_15px">
+        <% if @product.reviews.reviewer_exist?(@user, @product) %>
+          <p class="review_btn">you have already reviewed this product. Thank you</p>
+        <% else  %>
+          <%= link_to 'review product', new_user_review_path(@user, product_id: @product), class: "review_btn" %>
         <% end %>
-      </ul>
-    </div>
-  </div>
-  <!--section-->
-
-  <!--section-->
-  <% if current_user %>
-    <div class="margin_bottom_15px">
-      <% if @product.reviews.reviewer_exist?(@user, @product) %>
-        <p>you have already reviewed this product</p>
-      <% else  %>
-        <%= link_to 'review product', new_user_review_path(@user, product_id: @product) %>
-      <% end %>
-    </div>
-  <% end %>
-  <!--section-->
-
-  <!--section-->
-  <div>
-    <div><u>product reviews:</u></div>
+      </div>
+    <% end %>
+    <!--review-->
+    <!--reviews-->
+    <div class="clear"></div>
+    <div class="header_review"><u>product reviews:</u></div>
     <ul>
       <% @product.reviews.each do |review| %>
         <li>
@@ -77,7 +49,44 @@
         </li><br/>
       <% end %>
     </ul>
+    <!--reviews-->
   </div>
   <!--section-->
 
+
+  <!--section-->
+  <% if admin_signed_in? %>
+    <div class="border_content"></div>
+    <!--section-->
+    <div class="margin_bottom_15px">
+      <div class="product_title">product variants (Admin View)</div>
+      <div class="margin_bottom_15px"><%= link_to "create variant for product", new_variant_path(product_id: @product) %></div>
+      <div class="variant_cover">
+        <ul>
+          <% @product.variants.each do |var| %>
+            <li>
+              <div>
+                <% if var.image_var.present? %>
+                  <%= cl_image_tag(var.image_var_url) %>
+                <% else %>
+                  <%= image_tag "#{var.image_url}" %>
+                <% end %>
+              </div>
+              <div><%= "#{var.colour}" %></div>
+              <div>
+                <% if var.stock == 0 || var.stock == nil %>
+                  <div>stock: 0</div>
+                <% else %>
+                  <%= "stock: #{var.stock}" %>
+                <% end %>
+              </div>
+              <div><%= link_to "edit", edit_variant_path(var, product_id: @product) %></div>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+    <!--section-->
+  <% end %>
+  <!--section-->
 </div>
