--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,3 @@
-
 <%= simple_form_for [@user, @review] do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
@@ -9,8 +8,9 @@
     </div>
 
     <%= f.input :comment %>
-    <%= f.input :user_id %>
-    <%= f.input :product_id, input_html: { value: "#{@product.id}" } %>
+    <div class="hide"> class=hide<%= f.input :user_id %></div>
+    <div class="hide"><%= f.input :product_id, input_html: { value: "#{@product.id}" } %></div>
+
   </div>
 
   <div class="form-actions">
