--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,5 @@
-<h1>New review</h1>
-
-<%= render "form", review: @review %>
-
-<br>
-
-<div><%# link_to "Back to reviews", reviews_path %></div>
+<div>
+  <div><%= link_to "back to product", product_path(@product), class: "back_to_prod_btn" %></div>
+  <h1>New review</h1>
+  <%= render "form", review: @review %>
+</div>
