--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -79,9 +79,11 @@
   <!--variants-->
 
   <!--add_cart-->
-  <div class="product_submit_btn_section">
-    <div id="selected-colour"></div>
-    <button data-action="click->products#addToCart">add to cart</button>
-  </div>
+  <% if user_signed_in? || admin_signed_in? %>
+    <div class="product_submit_btn_section">
+      <div id="selected-colour"></div>
+      <button data-action="click->products#addToCart">add to cart</button>
+    </div>
+  <% end %>
   <!--add_cart-->
 </div>
